test里边的程序，调整时区后，能自动计算新时区的时间， 只差将新时间设置回系统（不知道是直接设置RTC时钟还是只设置系统时间）

--- a/ntpclient-2015/Makefile
+++ b/ntpclient-2015/Makefile
@@ -1,8 +1,11 @@
 
 NTPLIB= ../lib/libntpclient.a
+
+FLAGS= -lpthread 
+
 all:
-	$(CC) -c ntpclient.c -o ntpclient.o
-	$(CC) -c phaselock.c -o phaselock.o
+	$(CC) -c ntpclient.c $(FLAGS) -o ntpclient.o 
+	$(CC) -c phaselock.c $(FLAGS) -o phaselock.o
 	ar -rc $(NTPLIB) ntpclient.o  phaselock.o
 
 
